test/objects/test__c.object
<CustomObject>
    <fields>
        <fullName>fbool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>fbool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fnumber__c</fullName>
        <formula>6 - 2</formula>
        <label>fnumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ftext__c</fullName>
        <formula>LOWER(&quot;HEY MAN&quot;)</formula>
        <label>ftext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>money__c</fullName>
        <label>money</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>myautonumber__c</fullName>
        <displayFormat>AN-{00000}</displayFormat>
        <label>myautonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>myboolformula__c</fullName>
        <formula>false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>myboolformula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mydate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>mydate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mydateformula__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mydateformula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mydatetime__c</fullName>
        <label>mydatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mydatetimeformula__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mydatetimeformula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mydouble__c</fullName>
        <label>mydouble</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myemail__c</fullName>
        <defaultValue>&quot;dave&quot;</defaultValue>
        <description>description</description>
        <externalId>true</externalId>
        <inlineHelpText>help</inlineHelpText>
        <label>myemail</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>myformula__c</fullName>
        <formula>2.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>myformula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mygeo__c</fullName>
        <label>mygeo</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>myinteger__c</fullName>
        <label>myinteger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mylookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>mylookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contactss</relationshipLabel>
        <relationshipName>Contacts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mymasterdetail__c</fullName>
        <label>mymasterdetail</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>mynumberformula__c</fullName>
        <formula>65</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mynumberformula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mypercent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>mypercent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>mypercentformula__c</fullName>
        <formula>0.034</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mypercentformula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>myphone__c</fullName>
        <defaultValue>&quot;6507430794&quot;</defaultValue>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>myphone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>mytext2__c</fullName>
        <label>mytext2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mytext__c</fullName>
        <label>mytext</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mytextarea__c</fullName>
        <label>mytextarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mytextencryped__c</fullName>
        <description>desc</description>
        <inlineHelpText>help</inlineHelpText>
        <label>mytextencryped</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>mytextformula__c</fullName>
        <formula>&quot;DOOD&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mytextformula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myurl__c</fullName>
        <defaultValue>&quot;url&quot;</defaultValue>
        <description>desc</description>
        <inlineHelpText>hellp</inlineHelpText>
        <label>myurl</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>newbool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>newbool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>newtext__c</fullName>
        <label>newtext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rajenc__c</fullName>
        <label>rajenc</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>testdate__c</fullName>
        <formula>NOW()</formula>
        <label>testdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>testemail__c</fullName>
        <defaultValue>&quot;dave@merce.com&quot;</defaultValue>
        <label>testemail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>testencrypted__c</fullName>
        <label>testencrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>testpercent__c</fullName>
        <label>testpercent</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>testphone__c</fullName>
        <defaultValue>&quot;6507430794&quot;</defaultValue>
        <label>testphone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>testurl__c</fullName>
        <label>testurl</label>
        <type>Url</type>
    </fields>
    <label>test</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>